--- a/WODOMeterApp/WODOMeterApp/WODOMeterApp/MainPage.xaml
+++ b/WODOMeterApp/WODOMeterApp/WODOMeterApp/MainPage.xaml
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0" encoding="utf-8" ?>
+<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:ios="clr-namespace:Xamarin.Forms.PlatformConfiguration.iOSSpecific;assembly=Xamarin.Forms.Core" 
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
@@ -6,12 +6,6 @@
              x:Class="WODOMeterApp.MainPage"
              ios:Page.UseSafeArea="true">
     <StackLayout>
-        <Label
-            x:Name="MeasurementLabel"
-            Text="{Binding Measurement, Mode=OneWay}"
-            FontSize="Large"
-            HorizontalOptions="CenterAndExpand"
-            VerticalOptions="CenterAndExpand"
-            />
+        <Label x:Name="MeasurementLabel" Text="{Binding Measurement, Mode=OneWay}" FontSize="Large" HorizontalOptions="CenterAndExpand" VerticalOptions="CenterAndExpand" />
     </StackLayout>
 </ContentPage>
